<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_gradient"
    tools:context=".ui.authentication.SignUpActivity">

    <EditText
        android:id="@+id/signUpEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="100dp"
        android:autofillHints="@string/EMAIL_HINT"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/EMAIL_HINT"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/signUpPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="@string/PASSWORD_HINT"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/PASSWORD_HINT"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signUpSubmitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailText" />

    <Button
        android:id="@+id/signUpSubmitButton"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="255dp"
        android:background="@drawable/layout_rounded"
        android:focusable="true"
        android:text="@string/submit_button_text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
